--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="nickname_hint">Nickname</string>
     <string name="welcome_text">Welcome to ScoutLink, please enter a nickname below</string>
     <string name="label_send_message_button">Send</string>
+    <string name="send_message_hint">Type to send a message</string>
 
 </resources>
