--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="welcome_text">Welcome to ScoutLink, please enter a nickname below</string>
     <string name="label_send_message_button">Send</string>
     <string name="send_message_hint">Type to send a message</string>
+    <string name="action_close">Close</string>
+    <string name="action_disconnect">Disconnect</string>
+    <string name="action_users">User list</string>
 
 </resources>
