--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="join_activity_label">Join Channel</string>
     <string name="close_server_window">You cannot close the server window!</string>
     <string name="userlist_not_on_channel">This function only works on channels</string>
+    <string name="send_message_in_server_window">You cannot send messages to the server window.</string>
 
 </resources>
