Refactored to use PircBotX, a more actively maintained fork of PircBot

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,49 @@
     <string name="title_activity_notice">Send a notice</string>
     <string name="send_notice_button">Send</string>
     <string name="activity_invite_title">Invited to Channel</string>
-    <string name="invited_to_channel">You have been invited to %s, would you like to join?</string>
-
+    <string name="invited_to_channel">You have been invited to %1$s, would you like to join?</string>
+    <string name="notification_connected">Connected as %s</string>
+    <string name="notification_not_connected">Not connected.</string>
+    <string name="message_halfopevent">%1$s gave halfop to %2$s</string>
+    <string name="message_dehalfopevent">%1$s took halfop from %2$s</string>
+    <string name="message_opevent">%1$s gave op to %2$s</string>
+    <string name="message_deopevent">%1$s took op from %2$s</string>
+    <string name="message_superopevent">%1$s gave admin to %2$s</string>
+    <string name="message_desuperopevent">%1$s took admin from %2$s</string>
+    <string name="message_ownerevent">%1$s gave owner to %2$s</string>
+    <string name="message_deownerevent">%1$s took owner from %2$s</string>
+    <string name="message_voiceevent">%1$s gave voice to %2$s</string>
+    <string name="message_devoiceevent">%1$s took voice from %2$s</string>
+    <string name="message_message">&lt;%1$s&gt; %2$s</string>
+    <string name="message_private">&lt;%1$s&gt; %2$s</string>
+    <string name="message_notice">-%1$s- %2$s</string>
+    <string name="message_join">%1$s has joined %2$s</string>
+    <string name="message_kicked_self">You were kicked from %1$s by %2$s (%3$s)</string>
+    <string name="message_kicked_other">%1$s was kicked from %2$s by %3$s (%4$s)</string>
+    <string name="message_nickchange">%1$s changed their nick to %2$s</string>
+    <string name="message_part">%1$s has left %2$s (%3$s)</string>
+    <string name="message_quit">%1$s has left ScoutLink (%2$s)</string>
+    <string name="message_version">ScoutLink for Android</string>
+    <string name="message_ban_add">%1$s has banned %2$s</string>
+    <string name="message_ban_remove">%1$s has unbanned %2$s</string>
+    <string name="message_set_private">%1$s has set the channel to private</string>
+    <string name="message_unset_private">%1$s has set the channel to public</string>
+    <string name="message_set_secret">%1$s has set the channel to secret</string>
+    <string name="message_unset_secret">%1$s has set the channel to visible</string>
+    <string name="message_set_key">%1$s has set the channel key to %2$s</string>
+    <string name="message_unset_key">%1$s has removed the channel key</string>
+    <string name="message_set_limit">%1$s has set the channel user limit to %2$s</string>
+    <string name="message_unset_limit">%1$s has removed the channel user limit</string>
+    <string name="message_set_invite">%1$s has set the channel to invite only</string>
+    <string name="message_unset_invite">%1$s has unset invite only mode</string>
+    <string name="message_set_moderated">%1$s has enabled moderated mode (only voices and above can talk)</string>
+    <string name="message_unset_moderated">%1$s has disabled moderated mode (everyone can talk)</string>
+    <string name="message_set_no_external">%1$s has disabled external messages</string>
+    <string name="message_unset_no_external">%1$s has enabled external messages</string>
+    <string name="message_usermode">%1$s sets mode: %2$s %3$s</string>
+    <string name="message_topic">Topic is %1$s (Set by %2$s)</string>
+    <string name="message_topic_changed">%1$s changes topic to %2$s</string>
+    <string name="message_set_topicprotect">%1$s has enabled topic protection</string>
+    <string name="message_unset_topicprotect">%1$s has disabled topic protection</string>
+    <string name="message_action">%1$s %2$s</string>
 </resources>
