--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,10 @@
     <string name="message_unset_topicprotect">%1$s has disabled topic protection</string>
     <string name="message_action">%1$s %2$s</string>
     <string name="action_kick_dialog_title">Reason for kick:</string>
+
+    <string name="settings_nickname_label">Nickname:</string>
+    <string name="settings_ident_label">Username:</string>
+    <string name="settings_gecos_label">Real Name:</string>
+    <string name="settings_nickserv_user_label">Nickserv Username:</string>
+    <string name="settings_nickserv_password_label">Nickserv Password:</string>
 </resources>
