Added ChannelSettingsActivity, allowing users to set common channel modes in a GUI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,38 @@
     <string name="edit_list_title">Edit list</string>
     <string name="settings_autojoin_channels_label">Autojoin Channels</string>
     <string name="settings_command_on_connect_label">Run commands on connect</string>
+    <string name="title_activity_channel_settings">Channel Settings</string>
+    <string name="action_channel_settings">Channel Settings</string>
+    <string name="channel_settings_external_messages">Block external messages</string>
+    <string name="channel_settings_topic_protection">Enable topic protection</string>
+    <string name="channel_settings_private">Private</string>
+    <string name="channel_settings_secret">Secret</string>
+    <string name="channel_settings_invite_only">Invite only</string>
+    <string name="channel_settings_moderated">Moderated</string>
+    <string name="channel_settings_limit">User limit</string>
+    <string name="channel_limit_set">Set</string>
+    <string name="channel_limit_remove">Remove</string>
+    <string name="channel_key_set">Set</string>
+    <string name="channel_key_remove">Remove</string>
+    <string name="channel_settings_key">Password</string>
+    <string name="channel_settings_topic_change">Change</string>
+    <string name="set_no_external_messages_failed">Failed to disable external messages</string>
+    <string name="remove_no_external_messages_failed">Failed to disable external messages</string>
+    <string name="set_topic_protection">Failed to enable topic protection</string>
+    <string name="remove_topic_protection">Failed to disable topic protection</string>
+    <string name="set_private_failed">Failed to set private</string>
+    <string name="remove_private_failed">Failed to unset private</string>
+    <string name="set_secret_failed">Failed to set secret</string>
+    <string name="remove_secret_failed">Failed to unset secret</string>
+    <string name="set_moderated_failed">Failed to set moderated</string>
+    <string name="remove_moderated_failed">Failed to unset moderated</string>
+    <string name="set_invite_only_failed">Failed to set invite-only</string>
+    <string name="remove_invite_only_failed">Failed to unset invite-only</string>
+    <string name="set_channel_limit_failed">Failed to set channel limit</string>
+    <string name="remove_channel_limit_failed">Failed to remove channel limit</string>
+    <string name="set_channel_key_failed">Failed to set channel key</string>
+    <string name="remove_channel_key_failed">Failed to remove channel key</string>
+    <string name="channel_settings_need_op">You must be an op to change channel settings</string>
+    <string name="channel_settings_not_channel">You can only change settings in channels</string>
+
 </resources>
