--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,8 +111,8 @@
     <string name="message_topic_changed">%1$s changes topic to %2$s</string>
     <string name="message_set_topicprotect">%1$s has enabled topic protection</string>
     <string name="message_unset_topicprotect">%1$s has disabled topic protection</string>
-    <string name="message_action">%1$s %2$s</string>
-    <string name="message_notice">-%1$s- %2$s</string>
+    <string name="message_action">*%1$s</string>
+    <string name="message_notice_sender">-%1$s-</string>
 
     <string name="action_kick_dialog_title">Reason for kick:</string>
 
