--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,7 @@
     <string name="connect_button">Start Chatting</string>
     <!-- Text displayed below the logo on the main screen -->
     <string name="welcome_text">
-        Welcome to ScoutLink, the IRC network for Scouts and Guides.\n
-        Please enter a nickname below.
+        Welcome to ScoutLink, the IRC network for Scouts and Guides.\nPlease enter a nickname below.
     </string>
     <string name="sl_header_content_description">Header image</string>
 
@@ -167,7 +166,7 @@
 
     <!-- Default settings values -->
     <!-- Default ident to use if the user does not set one, this will show in the users hostmask (nick!ident@host) -->
-    <string name="default_ident">AndroidIRC</string>
+    <string name="default_ident">SLAndroid</string>
     <!-- Default Real Name to use if the user does not set one, this will show in WHOIS -->
     <string name="default_gecos">ScoutLink IRC for Android!</string>
 
