--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -176,6 +176,12 @@
     <string name="notification_connected">"Conectado como %1$s."</string>
     <string name="notification_new_multi">"%1$s novas mensagens, %2$s novas menções."</string>
 
+    <string name="title_activity_rules">Rules</string>
+    <string name="view_rules_dialog_title">View Rules?</string>
+    <string name="view_rules_dialog_message">Before you get started, would you like to read the ScoutLink rules? (You can view these at any time by selecting "Rules" from the menu)</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="connect_failed">Connection failed, please try again</string>
 
     <string name="notice_hint">"Digite sua mensagem"</string>
     <string name="settings_topic_hint">"Tópico do canal"</string>
