--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -186,7 +186,7 @@
     <string name="action_rules">Rheolau</string>
     <string name="title_activity_rules">Rheolau</string>
     <string name="view_rules_dialog_title">Rheolau View?</string>
-    <string name="view_rules_dialog_message">Cyn i chi ddechrau arni, a hoffech ddarllen y rheolau ScoutLink? (Gallwch weld hyn ar unrhyw adeg drwy ddewis "Rheolau" o'r ddewislen</string>
+    <string name="view_rules_dialog_message">Cyn i chi ddechrau arni, a hoffech ddarllen y rheolau ScoutLink? (Gallwch weld hyn ar unrhyw adeg drwy ddewis "Rheolau" o\'r ddewislen</string>
     <string name="yes">Ydw</string>
     <string name="no">Rhif</string>
     <string name="connect_failed">Methodd Cysylltiad, os gwelwch yn dda ceisiwch eto</string>
