--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -8,6 +8,8 @@
     <string name="nickname_not_valid">"Apelido inválido, por favor, use um diferente e tente novamente"</string>
     <!-- Text on the "Connect" button on the main screen -->
     <string name="connect_button">"Iniciar bate-papo"</string>
+    <!-- Message to say connection is in progress -->
+    <string name="connect_message">"Conectando à ScoutLink&#8230;"</string>
     <!-- Text displayed below the logo on the main screen -->
     <string name="welcome_text">"Bem-vindo à ScoutLink, a rede de IRC para Escoteiros e Guias. \n Por favor, digitar um apelido abaixo."</string>
     <string name="sl_header_content_description">"Imagem de cabeçalho"</string>
